# cgol

include/: CursorControl.hpp  Grid.hpp  RLE_Parser.hpp  TerminalSize.hpp  Utils.hpp  cursor_control.hpp  cursor_movement.hpp  grid.hpp  rle_parser.hpp  termcolor.hpp  terminal_size.hpp  utils.hpp
src/: Grid.cpp  Main.cpp  RLE_Parser.cpp  Tupfile  grid.cpp  main.cpp  meson.build  rle_parser.cpp
